# meshpi

./: .env.example  <MagicMock name='_config_txt_path()' id='140086943225840'>  <MagicMock name='_config_txt_path()' id='140086943228192'>  <MagicMock name='_config_txt_path()' id='140086945398864'>  <MagicMock name='_config_txt_path()' id='140086945399200'>  <MagicMock name='_config_txt_path()' id='140086945402224'>  <MagicMock name='_config_txt_path()' id='140086957159968'>  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.client  ENHANCED-CLI-FEATURES.md  Makefile  README.md  RPI-TESTING-README.md  TODO.md  ci.yml  crypto.py  diagnose-rpi.sh  docker-compose.test-rpi.yml  docker-compose.yml  entrypoint.sh  fake_applier.py  fix-rpi-meshpi.sh  goal.yaml  host.py  project.functions.toon  project.sh  pyproject.toml  run-rpi-tests.sh  test-doctor.sh  test-list.sh  test-ssh-scan-identify.sh
.github/workflows/: ci.yml  test-rpi-arch.yml
client/: Dockerfile
deploy/: prometheus.yml
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/dashboards/json/: meshpi-overview.json
docker/test-rpi/: Dockerfile  aggregate-results.py  test-installation.py  test-utils.py
docs/: CHEAT_SHEET.md  COMPLETE_DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  HARDWARE-GROUP-MANAGEMENT.md  RPI-REPAIR-MONITORING.md  RPI-TEST-RESULTS.md  RPI-TESTING.md  SSH-HARDWARE-MANAGEMENT.md  STANDARDS_TABLE.md  STANDARD_DOCUMENTATION.md
examples/: custom_profile_example.yaml
examples/profiles/: EASY_PROFILE_MANAGEMENT.md  README.md  adafruit_fruit_hat.yaml  bme280_weather_station.yaml  ds18b20_temperature_array.yaml  i2s_pcm5102_audio_dac.yaml  industrial_sensor_monitor.yaml  lcd_7_touchscreen_hdmi.yaml  lora_sx1276_wireless.yaml  motor_l298n_controller.yaml  multi_network_router.yaml  oled_ssd1306_status_display.yaml  pimoroni_explorer_hat.yaml  pisugar_ups_hat.yaml  relay_board_8channel.yaml  retro_gaming_station.yaml  rpi_camera_vision.yaml  rpi_sense_hat_complete.yaml  servo_pca9685_controller.yaml  stepper_a4988_controller.yaml  usb_gamepad_controller.yaml  voice_assistant_llm.yaml  waveshare_iot_hat.yaml  waveshare_lcd_43_touchscreen.yaml
meshpi/: __init__.py  applier.py  audit.py  cli.py  client.py  config.py  diagnostics.py  doctor.py  host.py  llm_agent.py  pendrive.py  registry.py  ssh_manager.py  systemd.py
meshpi/alerts/: __init__.py
meshpi/api/: __init__.py  monitoring.py
meshpi/dashboard/: __init__.py
meshpi/hardware/: __init__.py  applier.py  custom.py  profiles.py
meshpi/image/: __init__.py
meshpi/metrics/: __init__.py
meshpi/ota/: __init__.py
scripts/: monitor-repair.py  monitor-repair.sh  project.py  remote-rpi-test.sh  rpi-service-manager.sh  show-repair-status.py  show-repair-status.sh
test/: batch-rpi-test.sh  test-enhanced-cli.sh  test-restart.sh  test-ssh-host.sh
test-env/: Dockerfile
tests/: test_doctor.py  test_e2e.py  test_integration.py  test_meshpi.py  test_monitoring.py
